--- a/src/public/css/nav.css
+++ b/src/public/css/nav.css
@@ -2,7 +2,7 @@
 .nav_div_cont_nav{
     height: 60px;
     width: 100%;
-    background-color: var(--c3);
+    background-color: var(--c2);
 }
 
 .nav_nav{
@@ -14,10 +14,37 @@
 }
 
 .nav_lado1{
-    width: 100px;
-    height: 100%;
-    background-color: var(--c5);
+    height: 100%;   
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    padding-left: 20px;
 }
+
+.nav_div_cont_icono_out{
+    width: 40px;
+    height: 30px;
+    border-radius: 5px;
+    transition: box-shadow 0.5s;
+}
+
+
+.nav_icono_out{
+    width: 100%;
+    height: 100%;
+    fill: white;
+    transform: rotate(-90deg);
+}
+
+.nav_div_cont_icono_out:hover{
+    box-shadow: 3px 2px 3px 2px var(--c5);
+    cursor: pointer;
+}
+
+.nav_icono_out:active{
+    fill: var(--c5);
+}
+
 
 .nav_lado2{
     height: 100%;
@@ -32,4 +59,14 @@
     color: white;
     font-size: large;
     margin: 0 10px;
+    transition: color 0.2s;
+}
+
+.nav_link:hover{
+    border-bottom-style: solid;
+    border-color: var(--c5);
+}
+
+.nav_link:active{
+    color: var(--c5);
 }
