--- a/src/views/newprod.ejs
+++ b/src/views/newprod.ejs
@@ -14,6 +14,7 @@
             </div>
     </body>
     <script src="scripts/newprod.js"></script>
+    <script src="scripts/logout.js"></script>
 
 
     </html>
