--- a/src/views/sigin.ejs
+++ b/src/views/sigin.ejs
@@ -17,7 +17,7 @@
                 </form>
             </div>
     </body>
-    <script src="scripts/tosigin.js"></script>
-    <script src="scripts/logout.js"></script>
+    <script src="../../scripts/tosigin.js"></script>
+    <script src="../../scripts/logout.js"></script>
 
     </html>
