--- a/src/views/register.ejs
+++ b/src/views/register.ejs
@@ -19,7 +19,7 @@
                 </form>
             </div>
     </body>
-    <script src="scripts/tosignup.js"></script>
-    <script src="scripts/logout.js"></script>
+    <script src="../scripts/tosignup.js"></script>
+    <script src="../scripts/logout.js"></script>
 
     </html>
